adicionadas validações, operações assíncronas e tela de pesquisa

--- a/SalesWebMvc/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2021 - SalesWebMvc</p>
+            <p>&copy; @System.DateTime.Now.Year - SalesWebMvc</p>
         </footer>
     </div>
 
